# DbAI

./: .gitignore  CMakeLists.txt  README.md
include/: ann_dialog_system.h
include/activation/: relu.h  sigmoid.h
include/data/: data_loader.h
include/loss/: cross_entropy.h  mse.h
include/network/: layer.h  network.h
include/optimizer/: adam.h  sgd.h
include/transformer/: transformer.h
include/utils/: utils.h
src/: main.c
src/activation/: relu.c  sigmoid.c
src/data/: data_loader.c
src/loss/: cross_entropy.c  mse.c
src/network/: layer.c  network.c
src/optimizer/: adam.c  sgd.c  todo.txt
src/transformer/: transformer.c
src/utils/: utils.c
